<resources>
    <string name="app_name">ABC Recorder</string>
    <string name="text_about">About</string>
    <string name="text_build">Treefrog Inc.\n%s.%d.%s</string>
    <string name="button_text_all">All</string>
    <string name="button_text_add">Add</string>
    <string name="button_text_edit">Edit</string>
    <string name="button_text_delete">Del</string>
    <string name="button_text_mail">Mail</string>
    <string name="text_date_time">DATE/TIME</string>
    <string name="text_start_time">START TIME (yyyy-MM-dd HH:mm)</string>
    <string name="text_end_time">END TIME (yyyy-MM-dd HH:mm)</string>
    <string name="text_pre_condition_section">PRE-CONDITION OR ANTECEDENT\n(What happened before the behaviour)</string>
    <string name="hint_location">Where were you and Client</string>
    <string name="hint_pre_client">What was he/she doing/saying before the behaviour</string>
    <string name="hint_pre_reporter">What were you doing/saying before the behaviour</string>
    <string name="hint_incident_section"><![CDATA[WHAT BEHAVIOUR OCCURRED AND A\nDESCRIPTION OF WHAT YOU SAW & HEARD]]></string>
    <string name="hint_doing">What did he/she do?</string>
    <string name="hint_saying">What did he/she say?</string>
    <string name="text_response_section">YOUR ACTIONS OR CONSEQUENSES\n(describe what you did and for how long)</string>
    <string name="hint_reporter_action">What did you do?</string>
    <string name="hint_reporter_response">What did you say?</string>
    <string name="button_add_record">Add a new record</string>
    <string name="button_update_record">Update record</string>
    <string name="text_section_header">Section Header</string>
    <string name="text_label">%s: %s</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_ok">OK</string>
    <string name="text_deletion_confirmation">Confirm to delete these records? The operation cannot be recovered.</string>
    <string name="text_selection">Please select one or more records to continue.</string>
    <string name="text_mail_title">ABC Recording Sheet %s</string>
</resources>