<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tableRecords"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/main_toolbar"
        />
    <LinearLayout
        android:id="@+id/main_toolbar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <Button
            android:id="@+id/buttonAll"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/button_text_all"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/buttonMail"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/button_text_mail"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/buttonDelete"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/button_text_delete"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/buttonEdit"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/button_text_edit"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <Button
            android:id="@+id/buttonAdd"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/button_text_add"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>