<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_width="320dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textDialogOKTitle"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:textColor="@color/colorBackground"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
    <TextView
        android:id="@+id/textDialogOKContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textSize="14sp"
        android:text="@string/text_selection"
        android:hint="@string/app_name"
        android:autofillHints="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDialogOKTitle" />

    <android.widget.Button
        android:id="@+id/buttonDialogAlertOK"
        android:text="@string/text_ok"
        android:layout_marginStart="8dp"
        android:layout_width="180dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDialogOKContent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>